SubBt/force-app/main/default/objects/Answer_Choice__c/Answer_Choice__c.object-meta.xml
<CustomObject>
    <label>Selection Attribute</label>
    <nameField>
        <label>Option Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Selection Attributes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>