SubBt/force-app/main/default/objects/Answer_Choice__c/fields/Allow_Text_Entry__c.field-meta.xml
<CustomField>
    <fullName>Allow_Text_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Text Entry</label>
    <type>Checkbox</type>
</CustomField>