SubBt/force-app/main/default/objects/Answer_Choice__c/fields/Choice_Description__c.field-meta.xml
<CustomField>
    <fullName>Choice_Description__c</fullName>
    <label>Choice Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>