SubBt/force-app/main/default/objects/Answer_Choice__c/fields/Choice_Template__c.field-meta.xml
<CustomField>
    <fullName>Choice_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Answer Choice Template</label>
    <referenceTo>Choice_Template__c</referenceTo>
    <relationshipName>Answer_Choices</relationshipName>
    <type>Lookup</type>
</CustomField>