SubBt/force-app/main/default/objects/Answer_Choice__c/fields/Choice_Text__c.field-meta.xml
<CustomField>
    <fullName>Choice_Text__c</fullName>
    <label>Choice Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>