SubBt/force-app/main/default/objects/Answer_Choice__c/fields/Choice_Value__c.field-meta.xml
<CustomField>
    <fullName>Choice_Value__c</fullName>
    <label>Choice Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>