SubBt/force-app/main/default/objects/Answer_Choice__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>