SubBt/force-app/main/default/objects/Answer_Choice__c/fields/Delete_Record__c.field-meta.xml
<CustomField>
    <fullName>Delete_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delete Record</label>
    <type>Checkbox</type>
</CustomField>