SubBt/force-app/main/default/objects/Answer_Choice__c/fields/Drop_Down_Value__c.field-meta.xml
<CustomField>
    <fullName>Drop_Down_Value__c</fullName>
    <label>Drop Down Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>