SubBt/force-app/main/default/objects/Answer_Choice__c/fields/Image_Id__c.field-meta.xml
<CustomField>
    <fullName>Image_Id__c</fullName>
    <label>Image Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>