SubBt/force-app/main/default/objects/Answer_Choice__c/fields/Multi_Select_CheckBox__c.field-meta.xml
<CustomField>
    <fullName>Multi_Select_CheckBox__c</fullName>
    <label>Multi Select CheckBox</label>
    <length>255</length>
    <type>Text</type>
</CustomField>