SubBt/force-app/main/default/objects/Answer_Choice__c/fields/Multi_Select_Drop_Down__c.field-meta.xml
<CustomField>
    <fullName>Multi_Select_Drop_Down__c</fullName>
    <label>Multi Select Drop Down</label>
    <length>255</length>
    <type>Text</type>
</CustomField>