SubBt/force-app/main/default/objects/Answer_Choice__c/fields/Parent_Level__c.field-meta.xml
<CustomField>
    <fullName>Parent_Level__c</fullName>
    <label>Parent Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>