SubBt/force-app/main/default/objects/Answer_Choice__c/fields/Photo_Ids__c.field-meta.xml
<CustomField>
    <fullName>Photo_Ids__c</fullName>
    <label>Photo_Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>