SubBt/force-app/main/default/objects/Answer_Choice__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipName>Answer_Choices</relationshipName>
    <type>Lookup</type>
</CustomField>