SubBt/force-app/main/default/objects/Answer_Choice__c/fields/Selection_Type__c.field-meta.xml
<CustomField>
    <fullName>Selection_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Selection Type</label>
    <referenceTo>Question_Group__c</referenceTo>
    <relationshipLabel>Selection Attributes</relationshipLabel>
    <relationshipName>Selection_Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>