SubBt/force-app/main/default/objects/Answer_Choice__c/fields/Simple_Text__c.field-meta.xml
<CustomField>
    <fullName>Simple_Text__c</fullName>
    <label>Simple Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>