SubBt/force-app/main/default/objects/Answer_Choice__c/fields/Single_Select_Drop_Down__c.field-meta.xml
<CustomField>
    <fullName>Single_Select_Drop_Down__c</fullName>
    <label>Single Select Drop Down</label>
    <length>255</length>
    <type>Text</type>
</CustomField>