SubBt/force-app/main/default/objects/Answer_Choice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Choice_Description__c</columns>
    <columns>Choice_Template__c</columns>
    <columns>Choice_Text__c</columns>
    <columns>Choice_Value__c</columns>
    <columns>Question__c</columns>
    <columns>Allow_Text_Entry__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>